--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,11 +1,6 @@
-<div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0"
-<div ng-if="render"
-     fullscreen
-     style="position: fixed; top: 0; right: 0; bottom: 0; left: 0">
-    <p bn-fade-helper class="viewport">
-        <img class="image" title="{{ image.author }}" ng-src="{{ image.source }}" ng-click="toggleFullScreen()" />
-    </p>
+<div class="holder" ng-if="render" fullscreen ng-class="{opaque: isOpaque}">
+    <img class="image" title="{{ image.author }}" ng-src="{{ image.source }}" ng-click="toggleFullScreen()" />
     <div style="position: fixed; right: 20px; bottom: 10px">
-        <h5 style="color: white; font-family: 'Open Sans'" ng-if="source">Source: {{ image.author }}</h5>
+        <h5 style="color: white; font-family: 'Open Sans'" ng-if="image.author">Source: {{ image.author }}</h5>
     </div>
 </div>
